[package]
name = "nazo-key-management"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
test-support = []

[dependencies]
arc-swap = "1.8.2"
anyhow = "1.0.103"
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
ed25519-dalek = "3.0.0"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["aws_lc_rs", "use_pem"] }
nazo-auth = { version = "0.1.0", path = "../auth" }
openssl = "0.10.81"
p256 = { version = "0.14.0", features = ["ecdsa", "pkcs8"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "process", "rt", "sync", "time"] }
tracing = "0.1.44"
uuid = { version = "1.23.5", features = ["v7", "serde"] }

[lints]
workspace = true
