[package]
name = "nazo-valkey"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1.8.5"
fred = { version = "10.1.0", features = ["i-scripts"] }
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
